--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,6 +6,6 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://tracker-allocations-database.apps.pikes.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-blue.apps.pikes.pal.pivotal.io/
   services:
   - tracker-allocations-database
