--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -6,6 +6,6 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://tracker-timesheets-server.apps.pikes.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-blue.apps.pikes.pal.pivotal.io/
   services:
   - tracker-timesheets-database
