--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,10 @@ import io.pivotal.pal.tracker.gradlebuild.DependenciesGraphPlugin
 buildscript {
     ext {
         springBootVersion = "1.5.7.RELEASE"
-        springVersion = "4.3.8.RELEASE"
+        springVersion = "4.3.11.RELEASE"
         mysqlVersion = "6.0.6"
+        springCloudVersion = "Edgware.SR5"
+        springCloudServicesVersion = "1.6.6.RELEASE"
     }
 
     repositories {
