--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -5,7 +5,8 @@ applications:
   - route: timesheets-pal-blue.apps.pikes.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-blue.apps.pikes.pal.pivotal.io/
+  #env:
+    #REGISTRATION_SERVER_ENDPOINT: https://registration-pal-blue.apps.pikes.pal.pivotal.io/
   services:
   - tracker-timesheets-database
+  - tracker-service-registry
